2023-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 51403: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo, Doc/Zsh/func.yo,
	Doc/Zsh/grammar.yo, Doc/Zsh/params.yo, Test/K01nameref.ztst:
	Tests and documentation for 51402, clean up some other tests.

	* 51402: Src/builtin.c, Src/loop.c, Src/params.c, Src/zsh.h:
	Add ksh/bash features (unset -n, for ref), readonly refs,
	better error checking and messages, code injection safety,
	allow references to $! $? $$ $- $0 $_

	* 51375: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo, Doc/Zsh/params.yo,
	Doc/Zsh/mod_parameter.yo: Clarify, fix typos, add indexing.

	* 51374: Src/Modules/parameter.c, Src/params.c, Test/README,
	Test/K01nameref.ztst: Expose named references in $parameters,
	fix substitution error.

	* 51362: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo, Doc/Zsh/params.yo,
	Doc/Zsh/mod_parameter.yo: Begin documentation for named references.

	* 51361: Test/K01nameref.ztst, Test/V10private.ztst: Tests
	for 51360.

	* 51360: Src/Modules/param_private.c, Src/Modules/parameter.c,
	Src/builtin.c, Src/params.c, Src/subst.c, Src/zsh.h: Initial
	implementation of named references.

	* 51404: Src/jobs.c: Nullify filelist after deleting (fix segfault)

2023-02-09  Oliver Kiddle  <opk@zsh.org>

	* 51320, 51383: Src/Zle/zle_main.c, Src/Zle/complist.c,
	Src/Zle/zle_tricky.c, Test/D01prompt.ztst,
	Test/X04zlehighlight.ztst: fixes to prevent later reappearance
	of old attributes

2023-02-06  Peter Stephenson  <p.stephenson@samsung.com>

	* 51350: Src/subst.c, Test/D04parameter.ztst: the combination
	${(S)...//#%...} needs to match as far as possible.

2023-02-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 51354: Doc/Zsh/params.yo: Fix markup in man page version

2023-02-02  Peter Stephenson  <p.stephenson@samsung.com>

	* 51306: Doc/Zsh/expn.yo, Src/subst.c, Test/D04parameter.ztst:
	error message in ${unset?...} should be expanded.

	* 51307: Src/input.c, Src/parse.c, Test/A02alias.ztst: error
	on attempt to expand alias in function definition name didn't